Add a default-terminal option to set the starting value of $TERM in new windows.
This is "screen" by default and must be either that or something closely
related. This does makes it easier to customise it if necessary.

--- a/tmux.1
+++ b/tmux.1
@@ -1090,6 +1090,18 @@ environment variable or, if it is unset, the user's shell returned by
 Set the default working directory for processes created from keys, or
 interactively from the prompt.
 The default is the current working directory when the server is started.
+.It Ic default-terminal Ar terminal
+Set the default terminal for new windows created in this session - the
+default value of the
+.Ev TERM
+environment variable.
+For
+.Nm
+to work correctly, this
+.Em must
+be set to
+.Ql screen
+or a derivative of it.
 .It Ic display-time Ar time
 Set the amount of time for which status line messages are displayed.
 .Ar time
