paste-buffer -d was not documented. From Kalle Olavi Niemitalo.

--- a/tmux.1
+++ b/tmux.1
@@ -894,6 +894,9 @@ is used, move to the next window with a bell, activity or content alert.
 .Xc
 .D1 (alias: Ic pasteb )
 Insert the contents of a paste buffer into the current window.
+With
+.Fl d ,
+also delete the paste buffer from the stack.
 .It Xo Ic previous-window
 .Op Fl a
 .Op Fl t Ar target-session
