--- a/tmux.1
+++ b/tmux.1
@@ -897,6 +897,11 @@ Insert the contents of a paste buffer into the current window.
 With
 .Fl d ,
 also delete the paste buffer from the stack.
+When output, any linefeed (LF) characters in the paste buffer are replaced with
+carriage returns (CR).
+This translation may be disabled with the
+.Fl r
+flag.
 .It Xo Ic previous-window
 .Op Fl a
 .Op Fl t Ar target-session
