--- a/TODO
+++ b/TODO
@@ -92,10 +92,8 @@
   the highlight stuff
 - XXX once env stuff is in, default-path and VISUAL/EDITOR should be picked up when session is started
 - expand leading ~ in source-file save-buffer etc
-- screen/xterm etc translate \n to \r when pasting:
-  18:31 <+NicM> so i think the best thing might be to a) stick with \n
-  	internally b) change paste-buffer to translate \r to \n per xterm c)
-  	add a -r option to paste-buffer to turn off the translation
+- the copy mode next-word behaviour is emacs style (end of word) rather than vi style (start of word) even in vi keys mode,
+- when moving up from a blank line in copy mode it always assumes you were at the end of the line so it can be a bit funny. should remember last non-blank x position and use that
 - paste-buffer etc should be able to handle \0, so needs a size member and no more strlen
 - is utf8 a valid charset in LANG? also check for "unicode" in TERM
 - what about utmp etc? can tmux update it like screen? setgid?
