Fix arguments to switch-client.

--- a/tmux.1
+++ b/tmux.1
@@ -1541,7 +1541,8 @@ except the source and destination windows are swapped.
 It is an error if no window exists at
 .Ar src-window .
 .It Xo Ic switch-client
-.Op Fl c Ar target-client Fl t Ar target-session
+.Op Fl c Ar target-client
+.Op Fl t Ar target-session
 .Xc
 .D1 (alias: Ic switchc )
 Switch the current session for client
