Make it so using kill-pane to destroy the last pane in a window destroys the window instead of being an error.

--- a/tmux.1
+++ b/tmux.1
@@ -768,6 +768,7 @@ returns success.
 .Xc
 .D1 (alias: Ic killp )
 Destroy the given pane.
+If no panes remain in the containing window, it is also destroyed.
 .It Xo Ic kill-server
 .Xc
 Kill the
