New options, window-status-current-{fg,bg,attr}, to set the fg, bg and attributes with which the current window is shown in the status line. From Johan Friis, thanks.

--- a/tmux.1
+++ b/tmux.1
@@ -1489,6 +1489,12 @@ Set status line attributes for a single window.
 Set status line background colour for a single window.
 .It Ic window-status-fg Ar colour
 Set status line foreground colour for a single window.
+.It Ic window-status-current-attr Ar attributes
+Set status line attributes for the currently active window.
+.It Ic window-status-current-bg Ar colour
+Set status line background colour for the currently active window.
+.It Ic window-status-current-fg Ar colour
+Set status line foreground colour for the currently active window.
 .It Xo Ic xterm-keys
 .Op Ic on | Ic off
 .Xc
