Add a status-justify option to allow the window list in the status line to be positioned at the left, centre, or right.

--- a/tmux.1
+++ b/tmux.1
@@ -1262,6 +1262,11 @@ Update the status bar every
 seconds.
 By default, updates will occur every 15 seconds.
 A setting of zero disables redrawing at interval.
+.It Xo Ic status-justify
+.Op Ic left | Ic centre | Ic right
+.Xc
+Set the position of the window list component of the status line: left, centre
+or right justified.
 .It Xo Ic status-keys
 .Op Ic vi | Ic emacs
 .Xc
