Tweak unbind-key language very slightly.

--- a/tmux.1
+++ b/tmux.1
@@ -1618,7 +1618,7 @@ to
 .Ar key
 .Xc
 .D1 (alias: Ic unbind )
-Unbind the key bound to
+Unbind the command bound to
 .Ar key .
 .It Xo Ic unlink-window
 .Op Fl k
