up-pane and down-pane no longer auto-repeat; update the description of repeat-time accordingly. ok nicm@
if you prefer old behaviour;

bind -r Up up-pane
bind -r Down down-pane

--- a/tmux.1
+++ b/tmux.1
@@ -1225,9 +1225,7 @@ Whether a key repeats may be set when it is bound using the
 flag to
 .Ic bind-key .
 Repeat is enabled for the default keys of the
-.Ic up-pane ,
-.Ic down-pane ,
-.Ic resize-pane-up ,
+.Ic resize-pane-up
 and
 .Ic resize-pane-down
 commands.
