--- a/TODO
+++ b/TODO
@@ -61,27 +61,37 @@
 - some way to force a screen to use the entire terminal even if it is forced
   to be smaller by other clients. pan smaller terminal? (like screen F)
 - close/redirect stderr when popen to child proc for #() in status line
-- hooks to which commands may be attached, for example:
-  	tmux add-hook "new-session" if-shell "[ -e $HOME/.tmux-session.conf ]" source-file $HOME/.tmux-session.conf
+- hooks to which commands may be attached, for example: tmux add-hook
+  "new-session" if-shell "[ -e $HOME/.tmux-session.conf ]" source-file
+  $HOME/.tmux-session.conf
 - get it passing all the vttest tests that don't require resizing the terminal
 - does tmux require a exmple conf? where does it go?
 - there are an awful lot of commands. maybe separate man page for conf
   file/commands -similar to ssh/ssh_config?
-- esc seq to set window title should be documented and should set automatic-rename
+- esc seq to set window title should be documented and should set
+  automatic-rename
 - way to set socket path from config file
-- XXX once env stuff is in, default-path and VISUAL/EDITOR should be picked up when session is started
-- the copy mode next-word behaviour is emacs style (end of word) rather than vi style (start of word) even in vi keys mode,
-- when moving up from a blank line in copy mode it always assumes you were at the end of the line so it can be a bit funny. should remember last non-blank x position and use that
-- paste-buffer etc should be able to handle \0, so needs a size member and no more strlen
+- XXX once env stuff is in, default-path and VISUAL/EDITOR should be picked up
+  when session is started
+- the copy mode next-word behaviour is emacs style (end of word) rather than vi
+  style (start of word) even in vi keys mode,
+- when moving up from a blank line in copy mode it always assumes you were at
+  the end of the line so it can be a bit funny. should remember last non-blank
+  x position and use that
+- paste-buffer etc should be able to handle \0, so needs a size member and no
+  more strlen
 - is utf8 a valid charset in LANG? also check for "unicode" in TERM
 - what about utmp etc? can tmux update it like screen? setgid?
-- H/M/L commands in copy mode with vi-keys, for jumping to the top/middle/last line on the screen
+- H/M/L commands in copy mode with vi-keys, for jumping to the top/middle/last
+  line on the screen
 - split list-windows into separate list-windows and list-panes
 - option (mode-mouse) to turn off mouse in copy-mode etc
 - way to override terminfo definitions
 - ability to rebind mode keys
-  	  - make key binding code generic (key_tree?) from key_bindings, then use it for mode keya
-	  - split mode keys into separate trees for edit/choice/movement? flag for mode (vi)?
+  	  - make key binding code generic (key_tree?) from key_bindings, then
+            use it for mode keys
+	  - split mode keys into separate trees for edit/choice/movement? flag
+            for mode (vi)?
 - warts on current naming:
   	- display-time but message-fg/bg/attr
 	- list-* vs show-*
@@ -89,7 +99,8 @@
 	- up-pane/down-pane vs next-*/previous-* vs resize-pane U/D/L/R
 - pcvt25 doesn't work properly, why? (bce?)
 - tidy up and prioritise todo list ;-)
-- it is only possible to specify 8 colours to fg/bg options; should be able to set 256 as well
+- it is only possible to specify 8 colours to fg/bg options; should be able to
+  set 256 as well
 - neww and attach can create a session if none exists?
        would work fine with config file since
 - option to set customisable prompt for command-prompt (so eg bind -n F2
@@ -103,3 +114,8 @@
   bind mpc control commands to function keys ;-)
 - command to list what is actually running in each window with command line,
   pid (need some adaption of the osdep code)
+- options to change/remove the symbols (*-+ etc) in status line (bloat?)
+- status-fg/bg (and mode, message) are reversed, this is confusing if remove
+  reverse from status-attr, but confusing by default if they are fixed. best
+  would be to make fg/bg adaptive and have them do the right thing. need
+  changes/additions to options though
