Add a key to delete to end of line at the prompt (^K in emacs mode, C/D in vi).
From Kalle Olavi Niemitalo.

--- a/tmux.1
+++ b/tmux.1
@@ -331,6 +331,7 @@ The following keys are supported as appropriate for the mode:
 .It Li "Cursor right" Ta "l" Ta "Right"
 .It Li "Start selection" Ta "Space" Ta "C-Space"
 .It Li "Cursor up" Ta "k" Ta "Up"
+.It Li "Delete to end of line" Ta "D or C" Ta "C-k"
 .It Li "Paste buffer" Ta "p" Ta "C-y"
 .El
 .Pp
