Add a mode-mouse option to prevent tmux taking over the mouse in choice or copy modes.

--- a/tmux.1
+++ b/tmux.1
@@ -1529,9 +1529,15 @@ Set window modes foreground colour.
 .It Xo Ic mode-keys
 .Op Ic vi | Ic emacs
 .Xc
-Use vi or emacs-style
-key bindings in scroll and copy modes.
+Use vi or emacs-style key bindings in scroll, copy and choice modes.
 Key bindings default to emacs.
+.It Xo Ic mode-mouse
+.Op Ic on | Ic off
+.Xc
+Mouse state in modes. If on,
+.Nm
+will respond to mouse clicks by moving the cursor in copy mode or selecting an
+option in choice mode.
 .It Xo Ic monitor-activity
 .Op Ic on | Ic off
 .Xc
