new sentence, new line;

--- a/tmux.1
+++ b/tmux.1
@@ -1534,7 +1534,8 @@ Key bindings default to emacs.
 .It Xo Ic mode-mouse
 .Op Ic on | Ic off
 .Xc
-Mouse state in modes. If on,
+Mouse state in modes.
+If on,
 .Nm
 will respond to mouse clicks by moving the cursor in copy mode or selecting an
 option in choice mode.
