--- a/tmux.1
+++ b/tmux.1
@@ -1675,7 +1675,8 @@ If
 .Fl U
 is used and no source pane is specified with
 .Fl s ,
-.Ar dst-pane is swapped with the previous pane (before it numerically);
+.Ar dst-pane
+is swapped with the previous pane (before it numerically);
 .Fl D
 swaps with the next pane (after it numerically).
 .It Xo Ic swap-window
